--- a/Views/Azienda/CalendarioLavoratori.cshtml
+++ b/Views/Azienda/CalendarioLavoratori.cshtml
@@ -1,5 +1,7 @@
 @model DipendenteViewModel
 <link rel="stylesheet" href="~/css/calendariolavoratori.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMV3P8e1Po1URyYDQqUaip48Ac0M7M6V3U5mvr6" crossorigin="anonymous">
+
 <div class="search-container">
     <form asp-action="CalendarioLavoratori" method="get">
         <input class="search" type="text" id="nome" name="nome" placeholder="Cerca dipendente" />
@@ -11,97 +13,124 @@
 
 @if (Model != null)
 {
-    @if (Model.DipendenteTrovato)
+    if (Model.DipendenteTrovato)
     {
         int meseCorrente = Model.MeseProgrammazione;
         int annoCorrente = Model.AnnoProgrammazione;
-        string meseTestuale = new DateTime(Model.AnnoProgrammazione, Model.MeseProgrammazione, 1).ToString("MMMM");
-        <div class="nav-month">
-            <form class="form-month"asp-action="CalendarioLavoratori" method="get">
+string meseTestuale = new DateTime(Model.AnnoProgrammazione, Model.MeseProgrammazione, 1).ToString("MMMM").ToUpper();
+        int giorniNelMese = DateTime.DaysInMonth(annoCorrente, meseCorrente);
+        int primoGiornoDellaSettimana = (int)new DateTime(annoCorrente, meseCorrente, 1).DayOfWeek;
+        primoGiornoDellaSettimana = primoGiornoDellaSettimana == 0 ? 7 : primoGiornoDellaSettimana; // Converti Domenica (0) a 7
+
+     
+       <div class="calendar-container">
+    <div class="nav-month">
+            <form class="form-month" asp-action="CalendarioLavoratori" method="get">
                 <input type="hidden" name="nome" value="@Model.Nome" />
                 <input type="hidden" name="annoCorrente" value="@Model.AnnoProgrammazione" />
                 <input type="hidden" name="meseCorrente" value="@Model.MeseProgrammazione" />
                 <div class="month-selector">
-                    <button type="submit" name="direzione" value="precedente">precedente</button>
-                    <span>@meseTestuale</span>
-                    <span>@annoCorrente</span>
-                    <button type="submit" name="direzione" value="successivo">successivo</button>
+                    <button type="submit" name="direzione" value="precedente"><i class="fas fa-chevron-left"></i></button>
+                    <span id="current-month">@meseTestuale @annoCorrente</span>
+                    <button type="submit" name="direzione" value="successivo"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </form>
         </div>
-        <div class="calendar">
-            @for (int i = 1; i <= DateTime.DaysInMonth(Model.AnnoProgrammazione, Model.MeseProgrammazione); i++)
-            {
-                <div class="day">
-                    @i
-                    @{
-                        ProgrammazioneViewModel programmazione = Model.Programmazioni.FirstOrDefault(pm => pm.DataGiorno.Day == i);
+    <div class="calendar">
+        <div class="day-of-week">Lunedì</div>
+        <div class="day-of-week">Martedì</div>
+        <div class="day-of-week">Mercoledì</div>
+        <div class="day-of-week">Giovedì</div>
+        <div class="day-of-week">Venerdì</div>
+        <div class="day-of-week">Sabato</div>
+        <div class="day-of-week">Domenica</div>
 
-                        if (programmazione != null)
+        @for (int i = 1; i < primoGiornoDellaSettimana; i++)
+        {
+            <div class="day empty"></div>
+        }
+
+        @for (int i = 1; i <= giorniNelMese; i++)
+        {
+            <div class="day">
+                @i
+                @{
+                    ProgrammazioneViewModel programmazione = Model.Programmazioni.FirstOrDefault(pm => pm.DataGiorno.Day == i);
+
+                    if (programmazione != null)
+                    {
+                        string cssClass = "";
+                        bool isTimbraturaIrregolare = false;
+                        bool isTimbraturaRegolare = true;
+                        TimeSpan durataProgrammata = programmazione.InizioTurno - programmazione.FineTurno;
+
+                        if (programmazione.TimbraturaInizio != null && programmazione.TimbraturaUscita != null)
                         {
-                            string cssClass = "";
-                            bool isTimbraturaIrregolare = false; // Da rivedere la logica per questa variabile
-                            bool isTimbraturaRegolare = true; // Da rivedere la logica per questa variabile
-                            TimeSpan durataProgrammata = programmazione.InizioTurno - programmazione.FineTurno;
-
-                            if (programmazione.TimbraturaInizio != null && programmazione.TimbraturaUscita != null)
+                            TimeSpan? durataEffettiva = programmazione.TimbraturaInizio - programmazione.TimbraturaUscita;
+                            TimeSpan? differenza = durataProgrammata - durataEffettiva;
+                            if (differenza.HasValue && differenza.Value.TotalMinutes > 15)
                             {
-                                TimeSpan? durataEffettiva = programmazione.TimbraturaInizio - programmazione.TimbraturaUscita;
-                                TimeSpan? differenza = durataProgrammata - durataEffettiva;
-                                if (differenza.HasValue && differenza.Value.TotalMinutes > 15)
-                                {
-                                    isTimbraturaIrregolare = true;
-                                }
-                                else
-                                {
-                                    isTimbraturaRegolare = true;
-                                }
+                                isTimbraturaIrregolare = true;
                             }
-                            bool isFerie = programmazione.GiornoFerie;
-                            bool isPermesso = programmazione.GiornoPermesso;
-                            bool isMalattia = programmazione.GiornoMalattia;
-
-                            if (isTimbraturaRegolare)
+                            else
                             {
-                                cssClass = "regolare";
+                                isTimbraturaRegolare = true;
                             }
-                            if (isTimbraturaIrregolare)
-                            {
-                                cssClass = "irregolare";
-                            }
-                            if (isFerie)
-                            {
-                                cssClass = "ferie";
-                            }
-                            if (isMalattia)
-                            {
-                                cssClass = "malattia";
-                            }
-                            if (isPermesso)
-                            {
-                                cssClass = "permesso";
-                            }
-
-                            <div class="@cssClass">
-                                <i class="fa-solid fa-square-check"></i>
-                                <span>@programmazione.GiornoMalattia</span>
-                            </div>
                         }
+                        bool isFerie = programmazione.GiornoFerie;
+                        bool isPermesso = programmazione.GiornoPermesso;
+                        bool isMalattia = programmazione.GiornoMalattia;
+
+                        if (isTimbraturaRegolare)
+                        {
+                            cssClass = "regolare";
+                        }
+                        if (isTimbraturaIrregolare
+                        )
+                        {
+                            cssClass = "irregolare";
+                        }
+                        if (isFerie)
+                        {
+                            cssClass = "ferie";
+                        }
+                        if (isMalattia)
+                        {
+                            cssClass = "malattia";
+                        }
+                        if (isPermesso)
+                        {
+                            cssClass = "permesso";
+                        }
+
+                        <div class="@cssClass">
+                            <i class="fa-solid fa-square-check"></i>
+                           
+                        </div>
                     }
-                </div>
-            }
-        </div>
+                }
+            </div>
+        }
+
+        @for (int i = (primoGiornoDellaSettimana + giorniNelMese - 1) % 7; i < 7 && i > 0; i++)
+        {
+            <div class="day empty"></div>
+        }
+    </div>
+</div>
     }
     else
     {
-        <div>
-            dipendente non trovato
+        
+     <div class='dipnontrovato'>
+            Dipendente non trovato
         </div>
+      
     }
 }
 else
 {
-    <div>
+     <div>
         benvenuto nella sezione calendario
     </div>
 }
